--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,9 @@
+.App {
+  max-width: 900px;
+  margin: 0 auto;
+}
 
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
+}
